deploy/eks/chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-node-app
spec:
  type: { { .Values.service.type } }
  selector:
    app: demo-node-app
  ports:
    - name: http
      port: { { .Values.service.port } }
      targetPort: 3000
