deploy/eks/chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-node-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: { { .Values.ingress.className } }
  rules:
    - host: { { .Values.ingress.host } }
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-node-app
                port:
                  number: { { .Values.service.port } }
